@@ -165,7 +165,7 @@ public class ModelHandle2Test extends NbTestCase {
 "                <goal>org.codehaus.mojo:exec-maven-plugin:3.0.0:exec</goal>\n" +
 "            </goals>\n" +
 "            <properties>\n" +
-"                <exec.args>-XX:MaxPermSize=512m -classpath %classpath ${packageClassName}</exec.args>\n" +
+"                <exec.args>-classpath %classpath ${packageClassName}</exec.args>\n" +
 "                <exec.executable>java</exec.executable>\n" +
 "                <exec.classpathScope>${classPathScope}</exec.classpathScope>\n" +
 "            </properties>\n" +
@@ -180,7 +180,7 @@ public class ModelHandle2Test extends NbTestCase {
 "                <goal>org.codehaus.mojo:exec-maven-plugin:3.0.0:exec</goal>\n" +
 "            </goals>\n" +
 "            <properties>\n" +
-"                <exec.args>-XX:MaxPermSize=512m -agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address} -classpath %classpath ${packageClassName}</exec.args>\n" +
+"                <exec.args>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address} -classpath %classpath ${packageClassName}</exec.args>\n" +
 "                <exec.executable>java</exec.executable>\n" +
 "                <exec.classpathScope>${classPathScope}</exec.classpathScope>\n" +
 "                <jpda.listen>true</jpda.listen>\n" +
@@ -202,7 +202,7 @@ public class ModelHandle2Test extends NbTestCase {
 "                <goal>org.codehaus.mojo:exec-maven-plugin:3.0.0:exec</goal>\n" +
 "            </goals>\n" +
 "            <properties>\n" +
-"                <exec.args>-XX:MaxPermSize=512m -agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address} -classpath %classpath ${packageClassName}</exec.args>\n" +
+"                <exec.args>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address} -classpath %classpath ${packageClassName}</exec.args>\n" +
 "                <exec.executable>java</exec.executable>\n" +
 "                <exec.classpathScope>${classPathScope}</exec.classpathScope>\n" +
 "                <jpda.listen>true</jpda.listen>\n" +
